# novelsServer

./: .gitignore  CMakeLists.txt  book42zwLa.py  bookBeqegeCom.py  common.h  fun.key  fun.pem  getNovel.py  httpRouting.py  test.ipynb  test.py  webServer.cpp
include/: wglog.h
